--- a/static/scss/_titles.scss
+++ b/static/scss/_titles.scss
@@ -27,7 +27,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-family: 'helveticaneuecyrbold';
+  font-family: 'opensanssemibold';
   font-weight: normal;
 
   &.v1 {
