--- a/templates/office.html
+++ b/templates/office.html
@@ -1,7 +1,7 @@
 //= includes/_header.html
 
 <div class="width">
-	<h1>Личный кабинет</h1>
+	<h1 class="v1">Личный кабинет</h1>
 	<div class="tabs-cont">
 		<div class="float-cont">
 			<ul class="tabs tabs_wide">
@@ -32,7 +32,9 @@
 		<div class="tab-box selected">
 			//= includes/_accaunt.html
 		</div>
-		<div class="tab-box">контент2...</div>
+		<div class="tab-box">
+			//= includes/_orders.html
+		</div>
 		<div class="tab-box">контент2...</div>
 	</div>
 </div>
