--- a/templates/shopping_chart.html
+++ b/templates/shopping_chart.html
@@ -111,22 +111,22 @@
                                 <div class="tip tip_atop">Небольшое описание промо-кода и <a href="#" class="blue">ссылка</a> на страницу с подробным описанием понятия «Промо-код»</div>
                             </span>
                             , укажите его здесь:</span><!--
-                        --><span class="chart_input"><input type="text" class="text-box" /></span><!--
-                        --><span class="chart_button"><a href="#" class="btn btn_grey">Пересчитать</a></span>
+                        --><span class="chart_input"><input type="text" class="text-box s-change" data-change="promo"/></span><!--
+                        --><span class="chart_button"><a href="#" class="btn btn_grey" data-change="promo">Пересчитать</a></span>
                     </div>
                     <div class="chart_row ptb20">
                         <span class="chart_desc">
                             <b>У вас есть 1013 бонусов</b>
                             <span>Если вы хотите использовать их для оплаты, укажите количество бонусов</span>
                         </span><!--
-                        --><span class="chart_input"><input type="text" value="512" class="text-box" /></span><!--
-                        --><span class="chart_button"><a href="#" class="btn btn_grey">Пересчитать</a></span>
+                        --><span class="chart_input"><input type="text" value="512" class="text-box s-change" data-change="bonus" /></span><!--
+                        --><span class="chart_button"><a href="#" class="btn btn_block" data-change="bonus">Пересчитать</a></span>
                     </div>
                     <div class="chart_row chart_cost">Стоимость товаров: 1380 Р</div>
                     <div class="chart_row chart_promo">Скидка по промо-коду: 300 P</div>
                     <div class="chart_row chart_bonus">Скидка через бонусы: 520 P</div>
                     <div class="chart_row chart_final">Стоимость с учетом всех скидок: 560 Р</div>
-                    <div class="chart_panel">
+                    <div class="chart_action">
                         <span class="chart_checkout">
                             <a href="#" class="btn btn_block">Оформить заказ</a>
                             <a href="#" class="btn_default btn_cut-top btn_behind">Купить в один клик</a>
