--- a/static/scss/_forms.scss
+++ b/static/scss/_forms.scss
@@ -41,10 +41,10 @@ input.btn {
   background: -ms-linear-gradient(top,  #ffec56 0%,#ffd93f 100%); /* IE10+ */
   background: linear-gradient(to bottom,  #ffec56 0%,#ffd93f 100%); /* W3C */
 }
-.btn-wide {
+.btn_wide {
   padding: 0 50px;
 }
-.btn-big {
+.btn_big {
   height: 38px;
   line-height: 38px;
   font-size: 16px;
