--- a/templates/includes/_accaunt.html
+++ b/templates/includes/_accaunt.html
@@ -51,8 +51,8 @@
         </div>
         <div class="form_group">
             <div class="autocomplete-cont">
-                <label for="city" class="form_label">Город:</label>
-                <input type="text" id="city" class="form_text autocomplete-input" value="М"/>
+                <label for="city1" class="form_label">Город:</label>
+                <input type="text" id="city1" class="form_text autocomplete-input" value="М"/>
                 <div class="autocomplete">
                     <div class="autocomplete-line">Москва</div>
                     <div class="autocomplete-line">Мурманск</div>
@@ -60,39 +60,39 @@
             </div>
         </div>
         <div class="form_group">
-            <label for="station" class="form_label">Ближайшее метро:</label>
-            <input type="text" id="station" class="form_text" />
+            <label for="station1" class="form_label">Ближайшее метро:</label>
+            <input type="text" id="station1" class="form_text" />
         </div>
         <div class="form_group_wide">
             <div class="form_inline form_group">
-                <label for="street" class="form_label">Улица:</label>
-                <input type="text" id="street" class="form_text" />
+                <label for="street1" class="form_label">Улица:</label>
+                <input type="text" id="street1" class="form_text" />
             </div>
             <div class="form_inline form_group_thin">
-                <label for="house" class="form_label">Дом:</label>
-                <input type="text" id="house" class="form_text" />
+                <label for="house1" class="form_label">Дом:</label>
+                <input type="text" id="house1" class="form_text" />
             </div>
             <div class="form_inline form_group_thin">
-                <label for="corp" class="form_label">Строение/корпус:</label>
-                <input type="text" id="corp" class="form_text" />
+                <label for="corp1" class="form_label">Строение/корпус:</label>
+                <input type="text" id="corp1" class="form_text" />
             </div>
             <div class="form_inline form_group_thin">
-                <label for="office" class="form_label">Квартира/офис:</label>
-                <input type="text" id="office" class="form_text" />
+                <label for="office1" class="form_label">Квартира/офис:</label>
+                <input type="text" id="office1" class="form_text" />
             </div>
         </div>
         <div class="form_group form_group_wide">
             <div class="form_inline form_group_thin">
-                <label for="access" class="form_label">Подъезд:</label>
-                <input type="text" id="access" class="form_text" />
+                <label for="access1" class="form_label">Подъезд:</label>
+                <input type="text" id="access1" class="form_text" />
             </div>
             <div class="form_inline form_group_thin">
-                <label for="floor" class="form_label">Этаж:</label>
-                <input type="text" id="floor" class="form_text" />
+                <label for="floor1" class="form_label">Этаж:</label>
+                <input type="text" id="floor1" class="form_text" />
             </div>
             <div class="form_inline form_group_thin">
-                <label for="intercom" class="form_label">Домофон:</label>
-                <input type="text" id="intercom" class="form_text" />
+                <label for="intercom1" class="form_label">Домофон:</label>
+                <input type="text" id="intercom1" class="form_text" />
             </div>
         </div>
         <div class="form_group mb0">
@@ -130,7 +130,7 @@
     </div>
     <form action="#" method="post" class="form_hidden s-change" data-change="addPet" data-show="addPet">
         <div class="form_group tip-wrap tip-init">
-            <label for="intercom" class="form_label">Вид вашего питомца:</label>
+            <label class="form_label">Вид вашего питомца:</label>
             <select class="select2">
                 <option>Собака</option>
                 <option selected>Кошка</option>
