--- a/templates/shopping_chart.html
+++ b/templates/shopping_chart.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="plr20">
                     <table>
-                        <tr class="chart_row">
+                        <tr class="row">
                             <td><span class="chart_del"></span></td>
                             <td class="chart_product">
                                 <a href="#" class="fleft">
@@ -60,7 +60,7 @@
                                 <span>(2625 Р x 2)</span>
                             </td>
                         </tr>
-                        <tr class="chart_row">
+                        <tr class="row">
                             <td><span class="chart_del"></span></td>
                             <td class="chart_product">
                                 <a href="#" class="fleft">
@@ -104,7 +104,7 @@
                             </td>
                         </tr>
                     </table>
-                    <div class="chart_row ptb20">
+                    <div class="row ptb20">
                         <span class="chart_desc">Если у вас есть промо-код или купон
                             <span class="tip-wrap tip-init">
                                 (?)
@@ -114,7 +114,7 @@
                         --><span class="chart_input"><input type="text" class="text-box s-change" data-change="promo"/></span><!--
                         --><span class="chart_button"><a href="#" class="btn btn_grey" data-change="promo">Пересчитать</a></span>
                     </div>
-                    <div class="chart_row ptb20">
+                    <div class="row ptb20">
                         <span class="chart_desc">
                             <b>У вас есть 1013 бонусов</b>
                             <span>Если вы хотите использовать их для оплаты, укажите количество бонусов</span>
@@ -122,10 +122,10 @@
                         --><span class="chart_input"><input type="text" value="512" class="text-box s-change" data-change="bonus" /></span><!--
                         --><span class="chart_button"><a href="#" class="btn btn_block" data-change="bonus">Пересчитать</a></span>
                     </div>
-                    <div class="chart_row chart_cost">Стоимость товаров: 1380 Р</div>
-                    <div class="chart_row chart_promo">Скидка по промо-коду: 300 P</div>
-                    <div class="chart_row chart_bonus">Скидка через бонусы: 520 P</div>
-                    <div class="chart_row chart_final">Стоимость с учетом всех скидок: 560 Р</div>
+                    <div class="row chart_cost">Стоимость товаров: 1380 Р</div>
+                    <div class="row chart_promo">Скидка по промо-коду: 300 P</div>
+                    <div class="row chart_bonus">Скидка через бонусы: 520 P</div>
+                    <div class="row chart_final">Стоимость с учетом всех скидок: 560 Р</div>
                     <div class="chart_action">
                         <span class="chart_checkout">
                             <a href="#" class="btn btn_block">Оформить заказ</a>
