--- a/static/scss/_selects.scss
+++ b/static/scss/_selects.scss
@@ -79,6 +79,10 @@ select.select2-complex {
   }
 }
 
+.date-select .select2-container .select2-choice .select2-arrow b {
+  background-image: url(../images/ico/date.png);
+}
+
 .form_group .select2-container {
   width: 100%!important;
 
