--- a/templates/includes/_orders.html
+++ b/templates/includes/_orders.html
@@ -9,7 +9,7 @@
     </div>
     <div class="plr20 chart">
         <table>
-            <tr class="chart_row">
+            <tr class="row">
                 <td><span class="chart_del"></span></td>
                 <td class="chart_product chart_product_wide">
                     <a href="#" class="fleft">
@@ -35,7 +35,7 @@
                     <span>(2625 Р x 2)</span>
                 </td>
             </tr>
-            <tr class="chart_row">
+            <tr class="row">
                 <td><span class="chart_del"></span></td>
                 <td class="chart_product chart_product_wide">
                     <a href="#" class="fleft">
@@ -79,7 +79,7 @@
                 </td>
             </tr>
         </table>
-        <div class="chart_row ptb20">
+        <div class="row ptb20">
             <span class="chart_desc chart_desc_wide">Если у вас есть промо-код или купон
                 <span class="tip-wrap tip-init">
                     (?)
@@ -96,5 +96,97 @@
             <a href="#" class="chart_plus">Добавить товары из корзины</a>
             <div class="chart_orders fright">Стоимость товаров: 1380 Р</div>
         </div>
+    </div>
+</div>
+<div class="sh p20">
+    <h2 class="mb20">Детали доставки</h2>
+    <div class="row mb20">
+        <p class="semibold mb15">Изменить способ доставки:</p>
+        <form action="#" method="post">
+            <div class="mb15">
+                <label for="delivery-self" class="form_radio"><input type="radio" name="delivery-type" id="delivery-self" checked/><i></i>Самовывоз</label>
+            </div>
+            <div class="mb15">
+                <label for="delivery-man" class="form_radio"><input type="radio" name="delivery-type" id="delivery-man" /><i></i>Курьером</label>
+            </div>
+            <div class="form_group mb20">
+                <input type="submit" class="btn btn_block" value="Изменить способ" />
+            </div>
+        </form>
+    </div>
+    <div class="row mb20">
+        <p class="semibold mb15">Изменить адрес доставки:</p>
+        <form action="#" method="post">
+            <div class="mb15">
+                <label for="delivery2" class="form_radio"><input type="radio" name="delivery-address" id="delivery2" checked/><i></i>Основной адрес (г. Москва, Химкинский бульвар, д. 5, кв.12)</label>
+            </div>
+            <div class="mb15">
+                <label for="delivery3" class="form_radio"><input type="radio" name="delivery-address" id="delivery3" /><i></i>Дача (г. Реутов, ул. Туристическая, 15)</label>
+            </div>
+            <div class="mb25">
+                <label for="delivery4" class="form_radio"><input type="radio" name="delivery-address" id="delivery4" /><i></i>Новый адрес</label>
+            </div>
+            <div class="form_group">
+                <div class="autocomplete-cont">
+                    <label for="city2" class="form_label">Город:</label>
+                    <input type="text" id="city2" class="form_text autocomplete-input" value="М"/>
+                    <div class="autocomplete">
+                        <div class="autocomplete-line">Москва</div>
+                        <div class="autocomplete-line">Мурманск</div>
+                    </div>
+                </div>
+            </div>
+            <div class="form_group_wide">
+                <div class="form_inline form_group">
+                    <label for="street2" class="form_label">Улица:</label>
+                    <input type="text" id="street2" class="form_text" />
+                </div>
+                <div class="form_inline form_group_thin">
+                    <label for="house2" class="form_label">Дом:</label>
+                    <input type="text" id="house2" class="form_text" />
+                </div>
+                <div class="form_inline form_group_thin">
+                    <label for="corp2" class="form_label">Строение/корпус:</label>
+                    <input type="text" id="corp2" class="form_text" />
+                </div>
+                <div class="form_inline form_group_thin">
+                    <label for="office2" class="form_label">Квартира/офис:</label>
+                    <input type="text" id="office2" class="form_text" />
+                </div>
+            </div>
+            <div class="form_group mb20">
+                <input type="submit" class="btn btn_block" value="Изменить адрес" />
+            </div>
+        </form>
+    </div>
+    <div>
+        <p class="semibold mb15">Изменить дату и время доставки:</p>
+        <form action="#" method="post">
+            <div class="form_group_wide">
+                <div class="form_inline form_group">
+                    <label class="form_label">Дата:</label>
+                    <div class="date-select">
+                        <select class="select2">
+                            <option selected>21.01.2015</option>
+                            <option>22.01.2015</option>
+                            <option>23.01.2015</option>
+                            <option>24.01.2015</option>
+                        </select>
+                    </div>
+                </div>
+                <label for="soon"><input type="checkbox" id="soon" class="form_checkbox" /> Как можно раньше</label>
+            </div>
+            <div class="form_group">
+                <label class="form_label">Время:</label>
+                <select class="select2">
+                    <option selected>утро (с 9:00 до 12:00)</option>
+                    <option>день (с 12:00 до 16:00)</option>
+                    <option>вечер (с 16:00 до 20:00)</option>
+                </select>
+            </div>
+            <div class="form_group mb0">
+                <input type="submit" class="btn btn_block" value="Изменить дату и время" />
+            </div>
+        </form>
     </div>
 </div>
