--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -11,7 +11,7 @@
 		<div class="sidebar fleft">
 			<div class="breed-cont popup-cont tip-wrap">
 				<a href="#" class="popup-btn btn_big btn breed-btn tip-init" data-yoffset="50">Выбрать породу</a>
-				<div class="tip tip_atop">У нас есть специальные товары для некоторых пород. Выберите породу и посмотрите!</div>
+				<div class="tip tip_atop tip_atop_r">У нас есть специальные товары для некоторых пород. Выберите породу и посмотрите!</div>
 				<div class="popup-layer">
 					<div class="popup-inner">
 						<form>
