--- a/templates/includes/_accaunt.html
+++ b/templates/includes/_accaunt.html
@@ -23,7 +23,7 @@
         <div class="form_group" data-hide="changePassword">
             <span>Пароль: <a href="#" class="blue s-toggle" data-toggle="changePassword">изменить пароль</a></span>
         </div>
-        <div class="form_hidden" data-show="changePassword">
+        <div class="hidden" data-show="changePassword">
             <div class="form_group">
                 <label for="oldPas" class="form_label">Старый пароль:</label>
                 <input type="text" id="oldPas" class="form_text" />
@@ -44,7 +44,7 @@
         <button class="btn btn_block s-toggle" data-toggle="addAddress">Добавить адрес</button>
         <div class="tip tip_inside">Заполните 1 раз адрес доставки, и он будет автоматически подставляться при оформлении новых заказов, а также учитываться при доставке. Это удобно!</div>
     </div>
-    <form action="#" method="post" class="form_hidden s-change" data-change="addAddress" data-show="addAddress">
+    <form action="#" method="post" class="hidden s-change" data-change="addAddress" data-show="addAddress">
         <div class="form_group">
             <label for="delivery" class="form_label">Название для адреса:</label>
             <input type="text" id="delivery" class="form_text" value="Адрес №1" />
@@ -128,7 +128,7 @@
             <button class="btn btn_block s-toggle" data-toggle="addPet">Добавить питомца</button>
         </div>
     </div>
-    <form action="#" method="post" class="form_hidden s-change" data-change="addPet" data-show="addPet">
+    <form action="#" method="post" class="hidden s-change" data-change="addPet" data-show="addPet">
         <div class="form_group tip-wrap tip-init">
             <label class="form_label">Вид вашего питомца:</label>
             <select class="select2">
