--- a/templates/shopping_chart.html
+++ b/templates/shopping_chart.html
@@ -108,7 +108,7 @@
                         <span class="chart_desc">Если у вас есть промо-код или купон
                             <span class="tip-wrap tip-init">
                                 (?)
-                                <div class="tip tip_atop">Небольшое описание промо-кода и <a href="#" class="blue">ссылка</a> на страницу с подробным описанием понятия «Промо-код»</div>
+                                <div class="tip tip_atop tip_atop_b">Небольшое описание промо-кода и <a href="#" class="blue">ссылка</a> на страницу с подробным описанием понятия «Промо-код»</div>
                             </span>
                             , укажите его здесь:</span><!--
                         --><span class="chart_input"><input type="text" class="text-box s-change" data-change="promo"/></span><!--
