--- a/templates/catalog_breed.html
+++ b/templates/catalog_breed.html
@@ -11,7 +11,7 @@
 			<div class="sidebar fleft">
 				<div class="breed-cont popup-cont tip-wrap">
 					<a href="#" class="popup-btn btn_big btn breed-btn tip-init active" data-yoffset="50">Малая аппенинская гончая</a>
-					<div class="tip tip_atop">Мы отобрали товары специально для этой породы!</div>
+					<div class="tip tip_atop tip_atop_r">Мы отобрали товары специально для этой породы!</div>
 					<div class="popup-layer">
 						<div class="popup-inner">
 							<form>
