--- a/static/scss/_chart.scss
+++ b/static/scss/_chart.scss
@@ -200,7 +200,7 @@
   font-family: 'opensanssemibold';
   line-height: 21px;
 }
-.chart_plus {
+.chart_add {
   display: inline-block;
   vertical-align: top;
   margin-left: 8px;
