--- a/static/scss/_orders.scss
+++ b/static/scss/_orders.scss
@@ -83,9 +83,9 @@
   line-height: 30px;
 
   &.edit {
-    background: url(../images/ico/round-edit.png) 0 0 no-repeat;
+    background: url(../images/ico/orange-edit.png) 0 0 no-repeat;
   }
   &.repeat {
-    background: url(../images/ico/round-repeat.png) 0 0 no-repeat;
+    background: url(../images/ico/orange-repeat.png) 0 0 no-repeat;
   }
 }
