--- a/templates/includes/_orders.html
+++ b/templates/includes/_orders.html
@@ -1,4 +1,4 @@
-<div class="tab-box_top float-cont p0" data-hide="edit-order">
+<div class="tab-box_top float-cont p0 mb40" data-hide="edit-order">
     <div class="p20">
         <h2>Мои заказы</h2>
     </div>
