--- a/templates/includes/_orders_edit.html
+++ b/templates/includes/_orders_edit.html
@@ -93,12 +93,12 @@
             <div class="form_group form_inline mb0">
                 <a href="#" class="btn btn_block">Применить</a>
             </div>
-            <a href="#" class="chart_plus">Добавить товары из корзины</a>
+            <a href="#" class="chart_add">Добавить товары из корзины</a>
             <div class="chart_orders fright">Стоимость товаров: 1380 Р</div>
         </div>
     </div>
 </div>
-<div class="sh p20">
+<div class="sh p20 mb40">
     <h2 class="mb20">Детали доставки</h2>
     <div class="row mb20">
         <p class="semibold mb15">Изменить способ доставки:</p>
