--- a/templates/office.html
+++ b/templates/office.html
@@ -35,7 +35,9 @@
 		<div class="tab-box">
 			//= includes/_orders.html
 		</div>
-		<div class="tab-box">контент2...</div>
+		<div class="tab-box">
+			//= includes/_favorite.html
+		</div>
 	</div>
 </div>
 
