--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -90,7 +90,7 @@
 				<div class="catalog sh show-category">
 					<div class="search-top">
 						<div class="float-cont">
-							<form class="search-block full">
+							<form class="search-block full mb15">
 								<input type="text" class="search-input dark" value="Поводок" />
 								<input type="submit" class="search-sub" value=""/>
 							</form>
