--- a/static/scss/_hints.scss
+++ b/static/scss/_hints.scss
@@ -46,7 +46,7 @@
     top: -15px;
     left: 50%;
     margin-left: -5px;
-    border-bottom: 10px solid #000;
+    border-bottom: 10px solid $color-white;
   }
 }
 .tip_inside {
