--- a/static/scss/_search-form.scss
+++ b/static/scss/_search-form.scss
@@ -57,18 +57,20 @@
   width: 437px;
 }
 .search-block.full {
-   width: 100%;
-   margin: 0 0 17px;
+  width: 100%;
+  margin-top: 0;
+  margin-right: 0;
  }
 .search-input.dark {
   background: $color-bg-grey;
   border: 1px solid $color-grey;
 }
 .search-block.full .search-input {
-  width: 634px;
+  box-sizing: border-box;
+  width: 100%;
   color: $color-link-blue;
   font-family: 'opensanssemibold';
   font-size: 16px;
-  height: 38px;
+  height: 40px;
   line-height: 38px;
 }
